GUIDELINE * fixed a bug where checkboxes labels would overlap the helper's tips
HEROFW
+ added width--content and height--content classes
+ added helpers to constructor

SLIDERFW
+ added forced full height and width support
+ added helpers to  constructor
* improved constructor's display

--- a/src/components/guideline/_guideline.scss
+++ b/src/components/guideline/_guideline.scss
@@ -38,7 +38,7 @@
   & .descIcon{float: right; font-size: 1.2em; margin: 0.3em; cursor: pointer;
     &:hover+.descText{opacity: 1;visibility: visible;}
   }
-  & .descText{@extend %paper !optional; background-color: #fff; left: 0;right: 0;margin: auto; padding: 15px; font-size: 0.8em; position: absolute; width: fit-content; max-width: 80%; opacity: 0; visibility: hidden; transition: all 0.3s;
+  & .descText{@extend %paper !optional; background-color: #fff; left: 0;right: 0;margin: auto; padding: 15px; font-size: 0.8em; position: absolute; width: fit-content; max-width: 80%; opacity: 0; visibility: hidden; transition: all 0.3s; z-index: 1;
     &:hover{opacity: 1;visibility: visible;}
   }
 }
