--- a/src/components/heroFW/_heroFW.scss
+++ b/src/components/heroFW/_heroFW.scss
@@ -1,4 +1,5 @@
 .heroFW{ margin-bottom: $spacing; padding: 0; background-color: body(background); font-size: 1.25rem; font-weight: 300;
+  &.width--content{width: fit-content;}
   &[class*="ft-"] *{color: inherit;}
   @for $index from 1 through 6{
     &.title--1{
@@ -20,9 +21,9 @@
   }
 }
 .heroFW__wrapper{text-decoration: none; color: inherit; overflow: hidden; position: relative; display: block; width: 100%; height: 100%; }
-.heroFW__figure{
-  width: 100%;
-  height: 100%;
+.heroFW__figure{width: 100%; height: 100%;
+  .width--content &,
+  .height--content &{position: absolute;}
   @for $index from 0 through 10 {
     .figure__opacity--#{$index} &{opacity: $index*.1;}
   }
@@ -40,6 +41,8 @@
   }
 }
 .heroFW__content{position: absolute; z-index: 0; left: 0; top: 0; width: 100%;height: 100%; padding: $spacing*2; @include flex-container(row,wrap,flex-start,center);
+  .width--content &,
+  .height--content &{position: relative;}
   @include media-min(md){padding: $spacing*2 15vw;}
   .heroFW[class*="content--"] &{padding:$spacing*2;}
   .heroFW[class*="content--"][class*="--center"] &{justify-content: center; align-items: center;}
